修复复杂 bean 反射扫描/校验异常问题，优化接口文档显示

--- a/src/main/resources/META-INF/resources/ddm4j/css/content.css
+++ b/src/main/resources/META-INF/resources/ddm4j/css/content.css
@@ -160,6 +160,7 @@
 .content-table {
     margin-left: 20px;
     margin-top: 10px;
+    padding-right: 10px;
 }
 
 .content-table .title {
@@ -199,10 +200,10 @@ table .reg{
 /* 页脚 */
 .content-footer{
     position: fixed;
-    bottom: 5px;
+    bottom: 0px;
     margin-top: 30px;
     height: 60px;
-    width: 98%;
+    width: 100%;
     background-color: rgba(43, 43, 43, 0.25);
     text-align: center;
     line-height: 60px;
