--- a/src/main/resources/META-INF/resources/ddm4j/css/content.css
+++ b/src/main/resources/META-INF/resources/ddm4j/css/content.css
@@ -163,8 +163,8 @@
     background-color: #88be04;
     padding-left: 10px;
     padding-right: 10px;
-    line-height: 40px;
-    height: 40px;
+    position: relative;
+    top: 2px;
 }
 
 
